# ChangeLog for sys-kernel/tuxonice-sources
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-kernel/tuxonice-sources/ChangeLog,v 1.56 2009/03/20 19:54:10 nelchael Exp $

*tuxonice-sources-2.6.28-r8 (20 Mar 2009)

  20 Mar 2009; Krzysiek Pawlik <nelchael@gentoo.org>
  +tuxonice-sources-2.6.28-r8.ebuild:
  Revision bump for new genpatches.

*tuxonice-sources-2.6.28-r7 (19 Mar 2009)

  19 Mar 2009; Krzysiek Pawlik <nelchael@gentoo.org>
  -tuxonice-sources-2.6.28-r6.ebuild, +tuxonice-sources-2.6.28-r7.ebuild:
  Revision bump for new genpatches.

*tuxonice-sources-2.6.28-r6 (19 Mar 2009)

  19 Mar 2009; Krzysiek Pawlik <nelchael@gentoo.org>
  +tuxonice-sources-2.6.28-r6.ebuild:
  Revision bump for new genpatches.

*tuxonice-sources-2.6.28-r5 (17 Mar 2009)

  17 Mar 2009; Krzysiek Pawlik <nelchael@gentoo.org>
  +tuxonice-sources-2.6.28-r5.ebuild:
  Revision bump for new TuxOnIce release.

*tuxonice-sources-2.6.28-r4 (07 Mar 2009)

  07 Mar 2009; Krzysiek Pawlik <nelchael@gentoo.org>
  +tuxonice-sources-2.6.28-r4.ebuild:
  Revision bump for genpatches 2.6.28-4 and new TOI version.

  22 Feb 2009; Krzysiek Pawlik <nelchael@gentoo.org>
  tuxonice-sources-2.6.24-r9.ebuild, tuxonice-sources-2.6.28-r3.ebuild:
  Fix HOMEPAGE, see bug #259769.

*tuxonice-sources-2.6.28-r3 (17 Feb 2009)

  17 Feb 2009; Krzysiek Pawlik <nelchael@gentoo.org>
  -tuxonice-sources-2.6.28-r2.ebuild, +tuxonice-sources-2.6.28-r3.ebuild:
  Version bump.

*tuxonice-sources-2.6.28-r2 (16 Feb 2009)

  16 Feb 2009; Krzysiek Pawlik <nelchael@gentoo.org>
  -tuxonice-sources-2.6.24-r10.ebuild, -tuxonice-sources-2.6.25-r7.ebuild,
  -tuxonice-sources-2.6.25-r8.ebuild, -tuxonice-sources-2.6.26.ebuild,
  -tuxonice-sources-2.6.26-r4.ebuild, -tuxonice-sources-2.6.27-r7.ebuild,
  -tuxonice-sources-2.6.27-r8.ebuild, -tuxonice-sources-2.6.27-r9.ebuild,
  -tuxonice-sources-2.6.28.ebuild, -tuxonice-sources-2.6.28-r1.ebuild,
  +tuxonice-sources-2.6.28-r2.ebuild: