@@ -1,6 +1,13 @@
 # ChangeLog for sys-kernel/tuxonice-sources
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-kernel/tuxonice-sources/ChangeLog,v 1.56 2009/03/20 19:54:10 nelchael Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-kernel/tuxonice-sources/ChangeLog,v 1.57 2009/04/04 12:02:03 nelchael Exp $
+
+*tuxonice-sources-2.6.29 (04 Apr 2009)
+*tuxonice-sources-2.6.28-r9 (04 Apr 2009)
+
+  04 Apr 2009; Krzysiek Pawlik <nelchael@gentoo.org>
+  +tuxonice-sources-2.6.28-r9.ebuild, +tuxonice-sources-2.6.29.ebuild:
+  Version bump.
 
 *tuxonice-sources-2.6.28-r8 (20 Mar 2009)
 
